--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "^5.0.0",
     "redux": "^4.0.5",
+    "redux-thunk": "^2.4.1",
     "typescript": "4.4.4",
     "web-vitals": "^2.1.2"
   },
