--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^5.0.0",
+    "react-tsparticles": "^1.39.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.4.1",
     "typescript": "4.4.4",
