--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-app-travel",
   "version": "0.1.0",
   "private": true,
-  "homepage": "/travel/build/",
+  "homepage": "/travel/",
   "dependencies": {
     "@ant-design/icons": "^4.3.0",
     "@reduxjs/toolkit": "^1.7.1",
