--- a/package.json
+++ b/package.json
@@ -9,15 +9,10 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
-    "@types/jest": "^26.0.19",
-    "@types/node": "^12.19.9",
-    "@types/react": "^16.14.2",
-    "@types/react-dom": "^16.9.10",
-    "@types/react-redux": "^7.1.15",
-    "@types/react-router-dom": "^5.1.7",
     "antd": "^4.9.4",
     "axios": "^0.24.0",
     "i18next": "^19.8.4",
+    "jwt-decode": "^3.1.2",
     "nanoid": "^3.1.30",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -28,8 +23,16 @@
     "react-tsparticles": "^1.39.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.4.1",
-    "typescript": "4.4.4",
-    "web-vitals": "^2.1.2"
+    "web-vitals": "^2.1.2",
+    "typescript": "4.4.4"
+  },
+  "devDependencies": {
+    "@types/jest": "^26.0.19",
+    "@types/node": "^12.19.9",
+    "@types/react": "^16.14.2",
+    "@types/react-dom": "^16.9.10",
+    "@types/react-redux": "^7.1.15",
+    "@types/react-router-dom": "^5.1.7"
   },
   "scripts": {
     "start": "react-scripts start",
