--- a/package.json
+++ b/package.json
@@ -24,15 +24,15 @@
     "redux": "^4.0.5",
     "redux-thunk": "^2.4.1",
     "web-vitals": "^2.1.2",
-    "typescript": "4.4.4"
-  },
-  "devDependencies": {
+    "typescript": "4.4.4",
     "@types/jest": "^26.0.19",
     "@types/node": "^12.19.9",
     "@types/react": "^16.14.2",
     "@types/react-dom": "^16.9.10",
     "@types/react-redux": "^7.1.15",
     "@types/react-router-dom": "^5.1.7"
+  },
+  "devDependencies": {
   },
   "scripts": {
     "start": "react-scripts start",
