--- a/package.json
+++ b/package.json
@@ -9,12 +9,19 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
+    "@types/jest": "^26.0.19",
+    "@types/node": "^12.19.9",
+    "@types/react": "^16.14.2",
+    "@types/react-dom": "^16.9.10",
+    "@types/react-redux": "^7.1.15",
+    "@types/react-router-dom": "^5.1.7",
     "antd": "^4.9.4",
     "axios": "^0.24.0",
     "i18next": "^19.8.4",
     "jwt-decode": "^3.1.2",
     "nanoid": "^3.1.30",
     "react": "^17.0.1",
+    "react-credit-cards": "^0.8.3",
     "react-dom": "^17.0.1",
     "react-i18next": "^11.8.5",
     "react-redux": "^7.2.2",
@@ -22,17 +29,10 @@
     "react-scripts": "^5.0.0",
     "react-tsparticles": "^1.39.0",
     "redux": "^4.0.5",
+    "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.1",
-    "web-vitals": "^2.1.2",
     "typescript": "4.4.4",
-    "@types/jest": "^26.0.19",
-    "@types/node": "^12.19.9",
-    "@types/react": "^16.14.2",
-    "@types/react-dom": "^16.9.10",
-    "@types/react-redux": "^7.1.15",
-    "@types/react-router-dom": "^5.1.7"
-  },
-  "devDependencies": {
+    "web-vitals": "^2.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
