--- a/package.json
+++ b/package.json
@@ -9,12 +9,6 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
-    "@types/jest": "^26.0.19",
-    "@types/node": "^12.19.9",
-    "@types/react": "^16.14.2",
-    "@types/react-dom": "^16.9.10",
-    "@types/react-redux": "^7.1.15",
-    "@types/react-router-dom": "^5.1.7",
     "antd": "^4.9.4",
     "axios": "^0.24.0",
     "i18next": "^19.8.4",
@@ -57,5 +51,13 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/jest": "^26.0.19",
+    "@types/node": "^12.19.9",
+    "@types/react": "^16.14.2",
+    "@types/react-dom": "^16.9.10",
+    "@types/react-redux": "^7.1.15",
+    "@types/react-router-dom": "^5.1.7"
   }
 }
